--- a/packages/terra-form-select/src/SelectOption.scss
+++ b/packages/terra-form-select/src/SelectOption.scss
@@ -10,7 +10,7 @@
 
     &.is-disabled {
       cursor: default;
-      opacity: 0.4;
+      opacity: 0.25;
       outline: 0;
 
       &:hover {
